--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,9 +3,71 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title><%#= title %> - Library Search</title>
+  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/favicon-180x180.png">
+  <meta name="theme-color" content="#00274C">
+  <meta name="description" content="<%#= description %>">
+  <meta property="og:title" content="<%#= title %>">
+  <meta property="og:description" content="<%#= description %>">
+  <meta property="og:site_name" content="Library Search">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://search.lib.umich.edu/images/og-image.png">
+  <meta property="og:image:alt" content="University of Michigan Library logo">
+  <meta property="og:url" content="https://search.lib.umich.edu<%= request.path %>">
+  <meta property="twitter:site" content="@umichlibrary">
+  <meta name="version" content="<%#=S.version%>">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib.min.css" as="style" />
+  <link href="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib.min.css" rel="stylesheet" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" as="style" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" rel="stylesheet" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" as="style" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" rel="stylesheet" />
+  <script async type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib-components.min.js"></script>
+  <!-- Google Tag Manager -->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || [];
+      w[l].push({
+        "gtm.start": new Date().getTime(),
+        event: "gtm.js",
+      });
+      var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s),
+        dl = l != "dataLayer" ? "&l=" + l : "";
+      j.async = true;
+      j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, "script", "dataLayer", "GTM-TX44PM3");
+  </script>
+  <!-- End Google Tag Manager -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-W0C2LGTEDC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-W0C2LGTEDC');
+  </script>
 </head>
 <body>
-  <%= yield %>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript>
+    <iframe
+      src="https://www.googletagmanager.com/ns.html?id=GTM-TX44PM3"
+      height="0"
+      width="0"
+      style="display: none; visibility: hidden;"
+    ></iframe>
+  </noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <%= erb :'partials/_header' %>
+  <main>
+    <%= yield %>
+  </main>
+  <%= erb :'partials/_footer' %>
 </body>
 </html>
