Adding partials to header.

--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -18,10 +18,10 @@
         </a>
       </li>
       <li>
-        <%#= erb :'partials/header/_login' %>
+        <%= erb :'partials/header/_login' %>
       </li>
       <li>
-        <%#= erb :'partials/header/_choose-affiliation', locals: { affiliations: settings.affiliations } %>
+        <%= erb :'partials/header/_choose-affiliation' %>
       </li>
     </ul>
   </nav>
