Adding and building styles.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -27,6 +27,8 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" as="style" />
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" rel="stylesheet" />
   <script async type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib-components.min.js"></script>
+  <link rel="preload" href="/styles/styles.css" as="style" />
+  <link href="/styles/styles.css" rel="stylesheet">
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
