--- a/views/layout.erb
+++ b/views/layout.erb
@@ -71,5 +71,6 @@
     <%= yield %>
   </main>
   <%= erb :'partials/_footer' %>
+  <script defer src="/scripts/partials/scripts.js"></script>
 </body>
 </html>
