--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,6 +29,8 @@
   <script async type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib-components.min.js"></script>
   <link rel="preload" href="/styles/styles.css" as="style" />
   <link href="/styles/styles.css" rel="stylesheet">
+  <link rel="preload" href="/styles/pages/styles.css" as="style" />
+  <link href="/styles/pages/styles.css" rel="stylesheet">
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
