--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,7 +17,7 @@
   <meta property="og:image:alt" content="University of Michigan Library logo">
   <meta property="og:url" content="https://search.lib.umich.edu<%= request.path %>">
   <meta property="twitter:site" content="@umichlibrary">
-  <meta name="version" content="<%#=S.version%>">
+  <meta name="version" content="<%=S.version%>">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib.min.css" as="style" />
