tests root and everything route; gives presenter to everything

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%#= title %> - Library Search</title>
+  <title><%= presenter.title %> - Library Search</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/favicon-180x180.png">
   <meta name="theme-color" content="#00274C">
   <meta name="description" content="<%#= description %>">
-  <meta property="og:title" content="<%#= title %>">
+  <meta property="og:title" content="<%= presenter.title %>">
   <meta property="og:description" content="<%#= description %>">
   <meta property="og:site_name" content="Library Search">
   <meta property="og:type" content="website">
