--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= presenter.title %> - Library Search</title>
+  <title><%= @presenter.title %> - Library Search</title>
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/favicon-180x180.png">
   <meta name="theme-color" content="#00274C">
   <meta name="description" content="<%#= description %>">
-  <meta property="og:title" content="<%= presenter.title %>">
+  <meta property="og:title" content="<%= @presenter.title %>">
   <meta property="og:description" content="<%#= description %>">
   <meta property="og:site_name" content="Library Search">
   <meta property="og:type" content="website">
@@ -24,8 +24,8 @@
   <link href="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib.min.css" rel="stylesheet" />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" as="style" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" rel="stylesheet" />
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" as="style" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=open_in_new,search" rel="stylesheet" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%=@presenter.icons%>" as="style" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%=@presenter.icons%>" rel="stylesheet" />
   <script async type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib-components.min.js"></script>
   <link rel="preload" href="/styles/styles.css" as="style" />
   <link href="/styles/styles.css" rel="stylesheet">
