Creating datastore landing pages, and adding content.

--- a/views/errors/404.erb
+++ b/views/errors/404.erb
@@ -1,1 +1,20 @@
-404
+<h1 id="maincontent" tabindex="-1">Page not found - 404</h1>
+
+<p class="text__large">We can't find the page you're looking for.</p>
+
+<h2>Try these options instead</h2>
+
+<ul>
+  <li>
+    Start over from <a href="/everything">the homepage</a>.
+  </li>
+  <li>
+    The link to the resource you're looking for may have changed, please search for the title or related keyword to check for current access.
+  </li>
+  <li>
+    <a href="/databases/browse">Browse all Databases</a> or <a href="/onlinejournals/browse">Browse all Online Journals</a> to view comprehensive lists of current library resources.
+  </li>
+  <li>
+    <a href="https://www.lib.umich.edu/ask-librarian?utm_source=library-search">Ask a librarian</a> and we'll help you find what you're looking for!
+  </li>
+</ul>
