--- a/views/datastores/catalog.erb
+++ b/views/datastores/catalog.erb
@@ -4,25 +4,27 @@
 <p>
   Your results will include everything in our physical collection (books, audio, video, maps, musical scores, archival materials, and more), as well as materials available online such as electronic books, streaming audio and video, and online journals.
 </p>
-
-<h2>
-  To find materials closest to you, please choose a library
-</h2>
-
-<ul>
-  <% 
-    [
-      "All libraries",
-      "U-M Ann Arbor Libraries",
-      "Flint Thompson Library",
-      "Bentley Historical Library",
-      "William L. Clements Library"
-    ].each do |library|
-  %>
-    <li>
-      <a class="button__ghost" href="?library=<%= library.tr(" ", "+") %>"><%= library %></a>
-    </li>
-  <% end %>
-</ul>
-
-<a href="https://lib.umich.edu/find-borrow-request/find-materials/using-other-catalogs?utm_source=library-search">About our other Library Catalogs</a>
+<div class="landing__content--libraries">
+  <h2>
+    To find materials closest to you, please choose a library
+  </h2>
+  <ul class="list__no-style">
+    <% 
+      [
+        "All libraries",
+        "U-M Ann Arbor Libraries",
+        "Flint Thompson Library",
+        "Bentley Historical Library",
+        "William L. Clements Library"
+      ].each do |library|
+    %>
+      <li>
+        <%# NO CONDITIONALS %>
+        <a class="button__ghost <%= params[:library] == library ? "button__ghost--active" : "" %>" href="?library=<%= library.tr(" ", "+") %>"><%= library %></a>
+      </li>
+    <% end %>
+  </ul>
+  <p>
+    <a href="https://lib.umich.edu/find-borrow-request/find-materials/using-other-catalogs?utm_source=library-search">About our other Library Catalogs</a>
+  </p>
+</div>
