--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,6 +31,8 @@
   <link href="/styles/styles.css" rel="stylesheet">
   <link rel="preload" href="/styles/pages/styles.css" as="style" />
   <link href="/styles/pages/styles.css" rel="stylesheet">
+  <link rel="preload" href="/styles/datastores/styles.css" as="style" />
+  <link href="/styles/datastores/styles.css" rel="stylesheet">
   <!-- Google Tag Manager -->
   <script>
     (function (w, d, s, l, i) {
