Adding navigation and styles. Created `datastores` variable. Need to define when the partial shows.

--- a/assets/styles/datastores/styles.scss
+++ b/assets/styles/datastores/styles.scss
@@ -1,72 +1,2 @@
-@use '../utilities';
-
-// --------------------------------------------------
-//
-// # Datastores
-//   Styling for datastore landing pages.
-//
-// ## Table of Contents
-//   1. Variables
-//   2. Content
-//     2.1 Summary
-//     2.2 Libraries
-//
-// --------------------------------------------------
-
-
-
-// ******************** //
-// *** 1. VARIABLES *** //
-// ******************** //
-
-$class: 'landing__content';
-
-
-
-
-
-// ****************** //
-// *** 2. CONTENT *** //
-// ****************** //
-
-.#{$class} {
-  & > p {
-    font-size: 1.15rem;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 30rem;
-  }
-}
-
-// *             * //
-// * 2.1 SUMMARY * //
-// *             * //
-
-.#{$class}--summary {
-  font-size: 1.25rem;
-  & + p:not([class]) {
-    border-top: 4px solid var(--search-color-grey-400);
-    margin-top: 2.5rem;
-    padding-top: 2.5rem;
-  }
-}
-
-// *               * //
-// * 2.2 LIBRARIES * //
-// *               * //
-
-.#{$class}--libraries {
-  margin-top: 2.5rem;
-  text-align: center;
-  ul {
-    @include utilities.flex($responsive: true, $wrap: true);
-    & {
-      gap: 1rem;
-      justify-content: center;
-      .button__ghost {
-        font-size: 1rem;
-        padding: 0.5rem 1rem;
-      }
-    }
-  }
-}
+@use 'layout';
+@use 'partials/navigation';
