--- a/views/datastores/layout.erb
+++ b/views/datastores/layout.erb
@@ -1,4 +1,6 @@
-<h1 id="maincontent" tabindex="-1" class="visually-hidden"><%= @presenter.title %></h1>
+<h1 id="maincontent" tabindex="-1" class="visually-hidden">
+  <%= @presenter.title %>
+</h1>
 
 <div class="landing__content">
   <%= yield %>
