Adding search partial, styles, and scripts. Updating `@presenter` to create controlling of injected styles and scripts.

--- a/views/datastores/partials/_navigation.erb
+++ b/views/datastores/partials/_navigation.erb
@@ -2,7 +2,7 @@
   <ul>
     <% datastores.each do |datastore| %>
       <li>
-        <a href="/<%= datastore[:slug] %>" class="underline__none" aria-current="<%= request.path.split('/')[1] == datastore[:slug] ? "page" : nil %>">
+        <a href="/<%= datastore[:slug] %>" class="underline__none" aria-current="<%= current_datastore == datastore[:slug] ? "page" : nil %>">
           <% if datastore[:slug] == "everything" %><span class="material-symbols-rounded material-symbols-filled" aria-hidden="true">dashboard</span><% end %><span><%= datastore[:title] %></span>
         </a>
       </li>
