Adding `no-javascript` class to `body` element, and removing it after DOM has loaded.

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -57,7 +57,7 @@
     gtag('config', 'G-W0C2LGTEDC');
   </script>
 </head>
-<body>
+<body class="no-javascript">
   <!-- Google Tag Manager (noscript) -->
   <noscript>
     <iframe
