got presenters to work for everything

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -24,8 +24,8 @@
   <link href="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib.min.css" rel="stylesheet" />
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" as="style" />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wdth,wght@0,62.5..100,300..700;1,62.5..100,300..700&display=swap" rel="stylesheet" />
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%= @presenter.icons.flatten.uniq.sort.join(",") %>" as="style" />
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%= @presenter.icons.flatten.uniq.sort.join(",") %>" rel="stylesheet" />
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%= @presenter.icons %>" as="style" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0&icon_names=<%= @presenter.icons %>" rel="stylesheet" />
   <script async type="module" src="https://cdn.jsdelivr.net/npm/@umich-lib/design-system/dist/umich-lib-components.min.js"></script>
   <% @presenter.styles.flatten.each do |stylesheet| %>
     <link rel="preload" href="/styles/<%= stylesheet %>" as="style" />
