Adding `@patron` logic to partials.

--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -19,10 +19,10 @@
         </a>
       </li>
       <li>
-        <%= erb :'partials/header/_login' %>
+        <%= erb :'partials/header/_login', locals: { logged_in: @patron[:logged_in?] } %>
       </li>
       <li>
-        <%= erb :'partials/header/_choose-affiliation' %>
+        <%= erb :'partials/header/_choose-affiliation', locals: { current_affiliation: request.params["affiliation"] || @patron[:affiliation] } %>
       </li>
     </ul>
   </nav>
