--- a/assets/styles/datastores/_layout.scss
+++ b/assets/styles/datastores/_layout.scss
@@ -31,10 +31,12 @@ $class: 'landing__content';
 
 .#{$class} {
   & > p {
-    font-size: 1.15rem;
     margin-left: auto;
     margin-right: auto;
     max-width: 30rem;
+    &:not(.#{$class}--summary) {
+      font-size: 1.15rem;
+    }
   }
 }
 
