--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -20,7 +20,7 @@
         <%= login %>
       </li>
       <li>
-        <%= erb :'partials/header/_choose-affiliation', locals: { current_affiliation: request.params["affiliation"] || @patron[:affiliation] } %>
+        <%= erb :'partials/header/_choose-affiliation', locals: { current_affiliation: request.params["affiliation"] || @patron.affiliation || "aa" } %>
       </li>
     </ul>
   </nav>
