--- a/views/datastores/partials/_search.erb
+++ b/views/datastores/partials/_search.erb
@@ -47,7 +47,7 @@
   <div class="search-form__tip viewport-container">
     <span class="material-symbols-rounded" aria-hidden="true">info</span>
     <% tips.each do |tip| %>
-      <p class="search__tip--content" data-value="<%= tip[:value] %>">
+      <p class="search-form__tip--content" data-value="<%= tip[:value] %>">
         <span class="strong"><%= tip[:value].start_with?("browse_") ? "Browse" : "Search" %> Tip:</span> <%= tip[:tip] %>
       </p>
     <% end %>
