--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -1,6 +1,7 @@
 @use '../colors';
 @use '../utilities';
 @use './header/choose-affiliation';
+@use './header/login';
 @use './header/logo';
 
 // --------------------------------------------------
