--- a/views/datastores/databases.erb
+++ b/views/datastores/databases.erb
@@ -5,5 +5,5 @@
   Your results will include databases the library subscribes to, databases of locally created materials, and databases available to anyone via open access.
 </p>
 <p>
-  <a href="/databases/browse">Browse all Databases</a> alphabetically or by academic discipline.
+  <%= link_to(body: "Browse all Databases", url: "/databases/browse") %> alphabetically or by academic discipline.
 </p>
