--- a/views/datastores/everything.erb
+++ b/views/datastores/everything.erb
@@ -2,7 +2,7 @@
   Search <span class="strong">Everything</span> to see a broad sampling of results from across 'Library Search' and to explore specific areas and records in greater detail.
 </p>
 <p>
-  You will see results from the <a href="/catalog">Catalog</a>, <a href="/articles">Articles</a>, <a href="/databases">Databases</a>, <a href="/onlinejournals">Online Journals</a>, and <a href="/guidesandmore">Guides and More</a> pages.
+  You will see results from the <%= link_to(body: "Catalog", url: "/catalog") %>, <%= link_to(body: "Articles", url: "/articles") %>, <%= link_to(body: "Databases", url: "/databases") %>, <%= link_to(body: "Online Journals", url: "/onlinejournals") %>, and <%= link_to(body: "Guides and More", url: "/guidesandmore") %> pages.
 </p>
 <p>
   Enter a search term in the search box to start your own Everything search.
