--- a/views/datastores/onlinejournals.erb
+++ b/views/datastores/onlinejournals.erb
@@ -5,5 +5,5 @@
   Your results will include journals the library subscribes to, as well as some available to anyone via open access. You will see statements with any specifics about access and many journals will be available through multiple platforms. Be sure to check dates alongside each to see what you can access.
 </p>
 <p>
-  <a href="/onlinejournals/browse">Browse all Online Journals</a> alphabetically or by academic discipline.
+  <%= link_to(body: "Browse all Online Journals", url: "/onlinejournals/browse") %> alphabetically or by academic discipline.
 </p>
