--- a/views/pages/about-library-search.erb
+++ b/views/pages/about-library-search.erb
@@ -61,32 +61,32 @@
 
 <h2>Management</h2>
 
-<p>Library Search's front- and back-end systems are managed by staff from the <a href="https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/design-and-discovery?utm_source=library-search">Design and Discovery</a>, <a href="https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/automation-indexing-and?utm_source=library-search">Automation, Indexing, and Metadata</a>, and <a href="https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/digital-library-applications?utm_source=library-search">Digital Library Applications</a> departments within the <a href="https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology?utm_source=library-search">Library Information Technology</a> division. All of the software we have developed is <a href="https://github.com/mlibrary?utm_source=library-search">available in GitHub</a> under open source licenses.</p>
+<p>Library Search's front- and back-end systems are managed by staff from the <%= link_to(body: "Design and Discovery", url: "https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/design-and-discovery") %>, <%= link_to(body: "Automation, Indexing, and Metadata", url: "https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/automation-indexing-and") %>, and <%= link_to(body: "Digital Library Applications", url: "https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology/digital-library-applications") %> departments within the <%= link_to(body: "Library Information Technology", url: "https://www.lib.umich.edu/about-us/our-divisions-and-departments/library-information-technology") %> division. All of the software we have developed is <%= link_to(body: "available in GitHub", url: "https://github.com/mlibrary") %> under open source licenses.</p>
 
 <p>The overall Library Search service is stewarded by the Library Search Service Team, co-chaired by Karen Reiman-Sendi and Ken Varnum.</p>
 
 <h2>Code repositories</h2>
 
-<p>The various applications developed at the University of Michigan Library are available through the <a href="https://github.com/mlibrary/?utm_source=library-search">University Library's GitHub</a> repository:</p>
+<p>The various applications developed at the University of Michigan Library are available through the <%= link_to(body: "University Library's GitHub", url: "https://github.com/mlibrary/") %> repository:</p>
 
 <ul>
   <li>
-    <a href="https://github.com/mlibrary/pride?utm_source=library-search">pride</a> -- A JavaScript library for interfacing with the U-M Library search backend
+    <%= link_to(body: "pride", url: "https://github.com/mlibrary/pride") %> -- A JavaScript library for interfacing with the U-M Library search backend
   </li>
   <li>
-    <a href="https://github.com/mlibrary/prejudice?utm_source=library-search">prejudice</a> -- A companion to pride
+    <%= link_to(body: "prejudice", url: "https://github.com/mlibrary/prejudice") %> -- A companion to pride
   </li>
   <li>
-    <a href="https://github.com/mlibrary/search?utm_source=library-search">search</a> -- A single-page web application that consolidates the library's multiple discovery interfaces into one
+    <%= link_to(body: "search", url: "https://github.com/mlibrary/search") %> -- A single-page web application that consolidates the library's multiple discovery interfaces into one
   </li>
   <li>
-    <a href="https://github.com/mlibrary/spectrum?utm_source=library-search">spectrum</a> -- The backend for Search
+    <%= link_to(body: "spectrum", url: "https://github.com/mlibrary/spectrum") %> -- The backend for Search
   </li>
   <li>
-    <a href="https://github.com/mlibrary/catalog-browse?utm_source=library-search">catalog-browse</a> -- The call number, author authority file, subject authority file application (under development as of April 2022)
+    <%= link_to(body: "catalog-browse", url: "https://github.com/mlibrary/catalog-browse") %> -- The call number, author authority file, subject authority file application (under development as of April 2022)
   </li>
 </ul>
 
 <h2>More information</h2>
 
-<p>If you are curious to know more about Library Search, please contact <a href="https://www.lib.umich.edu/users/varnum?utm_source=library-search">Ken Varnum</a>, Senior Program Manager and Discovery Strategist.</p>
+<p>If you are curious to know more about Library Search, please contact <%= link_to(body: "Ken Varnum", url: "https://www.lib.umich.edu/users/varnum") %>, Senior Program Manager and Discovery Strategist.</p>
