--- a/views/datastores/guidesandmore.erb
+++ b/views/datastores/guidesandmore.erb
@@ -2,5 +2,5 @@
   <span class="strong">Guides and more</span> is the place to learn about our services, spaces, and collections.
 </p>
 <p>
-  Your results will include research guides, specialty sites, blogs and blogs posts, and online exhibits. Visit  <a href="https://lib.umich.edu/?utm_source=library-search">lib.umich.edu</a> to search the library website, including library staff, current news, events, and physical exhibits.
+  Your results will include research guides, specialty sites, blogs and blogs posts, and online exhibits. Visit <%= link_to(body: "lib.umich.edu", url: "https://lib.umich.edu/") %> to search the library website, including library staff, current news, events, and physical exhibits.
 </p>
