--- a/views/pages/accessibility.erb
+++ b/views/pages/accessibility.erb
@@ -1,10 +1,8 @@
-<%# @title = "Accessibility" %>
-
 <h1 id="maincontent" tabindex="-1">Accessibility</h1>
 
 <p>We are dedicated to creating inclusive services and products for all users. We are constantly working to make Library Search as accessible and usable as possible.</p>
 
-<p>We aim to meet <a href="https://www.w3.org/TR/WCAG21/?utm_source=library-search">WCAG 2.1 AA standards</a></p>
+<p>We aim to meet <%= link_to(body: "WCAG 2.1 AA standards", url: "https://www.w3.org/TR/WCAG21/") %></p>
 
 <h2>Compatibility with tools</h2>
 
@@ -26,4 +24,4 @@
 
 <h2>Provide feedback</h2>
 
-<p>Are you having trouble using Library Search? <a href="https://umich.qualtrics.com/jfe/form/SV_bCwYIKueEXs8wBf?utm_source=library-search">Please let us know</a> so that we can make improvements to improve your experience.</p>
+<p>Are you having trouble using Library Search? <%= link_to(body: "Please let us know", url: "https://umich.qualtrics.com/jfe/form/SV_bCwYIKueEXs8wBf") %> so that we can make improvements to improve your experience.</p>
