--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -1,10 +1,10 @@
 <nav class="skip-links" aria-label="Skip links">
   <ul class="viewport-container">
     <li>
-      <a href="#maincontent">Skip to main content</a>
+      <%= link_to(body: "Skip to main content", url: "#maincontent") %>
     </li>
     <li>
-      <a href="#chat">Skip to Ask a Librarian chat</a>
+      <%= link_to(body: "Skip to Ask a Librarian chat", url: "#chat") %>
     </li>
   </ul>
 </nav>
@@ -14,9 +14,7 @@
     <%= erb :'partials/header/_logo' %>
     <ul>
       <li>
-        <a href="https://account.lib.umich.edu/?utm_source=library-search" class="underline__none">
-          Account
-        </a>
+        <%= link_to(body: "Account", url: "https://account.lib.umich.edu/", classes: ["underline__none"]) %>
       </li>
       <li>
         <%= erb :'partials/header/_login', locals: { logged_in: @patron[:logged_in?] } %>
