--- a/views/partials/header/_choose-affiliation.erb
+++ b/views/partials/header/_choose-affiliation.erb
@@ -8,14 +8,18 @@
   change_affiliation_url = "#{request.path}?#{URI.encode_www_form(request.params)}"
 %>
 
-<a href="<%= change_affiliation_url %>" class="affiliation__change">
-  <% affiliations.each do |affiliation| %>
-    <span class="<%= "affiliation__active" if affiliation[:active] %>">
-      <span class="visually-hidden"><%= affiliation[:active] ? "Current" : "Choose" %> campus affiliation:</span>
-      <span><%= affiliation[:name] %></span>
-    </span>
-  <% end %>
-</a>
+<%= link_to(
+  body: affiliations.map do |affiliation| 
+    <<-HTML
+      <span class="#{"affiliation__active" if affiliation[:active]}">
+        <span class="visually-hidden">#{affiliation[:active] ? "Current" : "Choose"} campus affiliation:</span>
+        <span>#{affiliation[:name]}</span>
+      </span>
+    HTML
+  end.join,
+  url: change_affiliation_url,
+  classes: ["affiliation__change"]
+) %>
 
 <dialog class="container__rounded--no-shadow affiliation__dialog">
   <section class="content">
@@ -26,9 +30,7 @@
         Continue as <%= affiliations.find { |affiliation| affiliation[:active] }[:name] %>
       </button>
       or
-      <a href="<%= change_affiliation_url %>" class="button__ghost">
-        Change to <%= inactive_affiliation[:name] %>
-      </a>
+      <%= link_to(body: "Change to #{inactive_affiliation[:name]}", url: change_affiliation_url, classes: ["button__ghost"]) %>
     </div>
     <p><small>You can still use Library Search if you're not affiliated with either campus.</small></p>
   </section>
