Creating `h1` method to replace all `h1` elements.

--- a/views/datastores/layout.erb
+++ b/views/datastores/layout.erb
@@ -1,6 +1,4 @@
-<h1 id="maincontent" tabindex="-1" class="visually-hidden">
-  <%= @presenter.title %>
-</h1>
+<%= h1(body: @presenter.title, classes: ["visually-hidden"]) %>
 
 <div class="landing__content">
   <%= yield %>
