--- a/views/errors/404.erb
+++ b/views/errors/404.erb
@@ -1,4 +1,4 @@
-<h1 id="maincontent" tabindex="-1">Page not found - 404</h1>
+<%= h1(body: "Page not found - 404") %>
 
 <p class="text__large">We can't find the page you're looking for.</p>
 
