--- a/views/pages/accessibility.erb
+++ b/views/pages/accessibility.erb
@@ -1,4 +1,4 @@
-<h1 id="maincontent" tabindex="-1">Accessibility</h1>
+<%= h1(body: "Accessibility") %>
 
 <p>We are dedicated to creating inclusive services and products for all users. We are constantly working to make Library Search as accessible and usable as possible.</p>
 
