--- a/views/pages/about-library-search.erb
+++ b/views/pages/about-library-search.erb
@@ -1,9 +1,8 @@
 <%#
-  @title = "About Library Search"
   @meta_description = "Library Search is designed to separate the user experience from the particular system that provides or manages the data."
 %>
 
-<h1 id="maincontent" tabindex="-1">About Library Search</h1>
+<%= h1(body: "About Library Search") %>
 
 <p>Library Search is the University of Michigan Library's discovery interface. Launched in July 2018, it is designed to provide a consistent user experience across the physical and electronic resources the library provides. The Everything view displays a few results matching a user's keyword search under separate panels for each of the five categories of information: Catalog, Articles, Databases, Online Journals, and Guides &amp; More. Each of these categories has an in-depth view that enables users to drill down into those materials to find what best meets their needs.</p>
 
