--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,9 +8,9 @@
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/favicon-180x180.png">
   <meta name="theme-color" content="#00274C">
-  <meta name="description" content="<%#= description %>">
+  <meta name="description" content="<%= @presenter.description %>">
   <meta property="og:title" content="<%= @presenter.title %>">
-  <meta property="og:description" content="<%#= description %>">
+  <meta property="og:description" content="<%= @presenter.description %>">
   <meta property="og:site_name" content="Library Search">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://search.lib.umich.edu/images/og-image.png">
