--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -2,6 +2,8 @@
 @use '../utilities';
 @use './header/choose-affiliation';
 @use './header/logo';
+@use './header/search';
+@use './header/navigation';
 
 // --------------------------------------------------
 //
